初步实现ai宠物

--- a/kindness_companion_app/resources/resources.qrc
+++ b/kindness_companion_app/resources/resources.qrc
@@ -1,44 +1,3 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource prefix="/">
-    <file>styles/main.qss</file>
-    <file>styles/dark.qss</file>
-    <file>styles/morandi_dark.qss</file> <!-- Added morandi_dark.qss -->
-    <!-- Correctly list font files under the 'fonts' alias -->
-    <file alias="fonts/Hiragino Sans GB.ttc">fonts/Hiragino Sans GB.ttc</file>
-    <file alias="fonts/Songti.ttc">fonts/Songti.ttc</file>
-    <file alias="fonts/STHeiti Light.ttc">fonts/STHeiti Light.ttc</file>
-    <file alias="fonts/STHeiti Medium.ttc">fonts/STHeiti Medium.ttc</file>
-    <file>icons/app_icon.png</file>
-    <file>icons/bell.svg</file>
-    <file>icons/calendar-check.svg</file>
-    <file>icons/check-circle.svg</file> <!-- Added check-circle icon -->
-    <file>icons/check-square.svg</file>
-    <!-- 检查此图标是否存在，如果不存在需要创建或修改引用 -->
-    <!-- <file>icons/check-white.svg</file> -->
-    <file>icons/chevron-down.svg</file>
-    <file>icons/edit-2.svg</file> <!-- Add edit icon -->
-    <file>icons/list.svg</file>
-    <file>icons/lock.svg</file> <!-- Add lock icon -->
-    <file>icons/log-in.svg</file>
-    <file>icons/log-out.svg</file>
-    <file>icons/plus-circle.svg</file>
-    <file>icons/plus.svg</file>
-    <file>icons/rotate-ccw.svg</file> <!-- Added rotate-ccw.svg -->
-    <file>icons/save.svg</file>
-    <file>icons/user-plus.svg</file>
-    <file>icons/user.svg</file>
-    <file>icons/users.svg</file>
-    <file>icons/x-circle.svg</file>
-    <!-- Added achievement icons -->
-    <file>icons/award.svg</file>
-    <file>icons/zap.svg</file>
-    <file>icons/book-open.svg</file>
-    <file>icons/leaf.svg</file>
-    <file>icons/star.svg</file>
-    <file>icons/target.svg</file>
-    <file>icons/image.svg</file> <!-- Added missing image icon -->
-    <file>icons/trash-2.svg</file> <!-- Added trash icon -->
-    <!-- Add image file -->
-    <file>images/profilePicture.png</file>
-</qresource>
-</RCC>
+version https://git-lfs.github.com/spec/v1
+oid sha256:48e976762c8a037c3320587aee2d3a744b4687d5c2a382ffaa3f24ee872a9894
+size 2440
